--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Farmer-to-Market Platform 🌾</title>
+  <title>Agri Input Ordering</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -32,6 +32,18 @@
     header h1 {
       margin: 0;
       color: var(--green);
+      font-size: 1.8em;
+    }
+
+    .guide-toggle {
+      margin-top: 10px;
+      background: var(--accent);
+      color: #000;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
     }
 
     .container {
@@ -48,7 +60,7 @@
       box-shadow: 0 0 10px rgba(0, 200, 83, 0.2);
     }
 
-    h2 {
+    h2, h3 {
       color: var(--accent);
       margin-top: 0;
     }
@@ -83,22 +95,48 @@
       background-color: var(--accent);
     }
 
-    .listing {
+    .order-output {
       background: #263238;
-      border-left: 5px solid var(--green);
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 8px;
+      padding: 10px;
+      margin-top: 10px;
+      border-left: 4px solid var(--green);
+      border-radius: 5px;
     }
 
-    .listing strong {
-      font-size: 1.1em;
-      color: var(--green);
+    #guideBox {
+      display: none;
+      background: #1b1b1b;
+      border: 1px solid var(--green);
+      border-radius: 8px;
+      padding: 20px;
+    }
+
+    #guideBox table {
+      width: 100%;
+      border-collapse: collapse;
+      color: var(--text);
+      font-size: 0.95em;
+    }
+
+    #guideBox th, #guideBox td {
+      padding: 6px;
+      border-bottom: 1px solid #333;
+      text-align: left;
+    }
+
+    #guideBox th {
+      color: var(--accent);
     }
 
     @media (max-width: 600px) {
-      .container {
-        padding: 10px;
+      header h1 {
+        font-size: 1.4em;
+      }
+
+      .guide-toggle {
+        width: 100%;
+        font-size: 0.95em;
+        margin-top: 10px;
       }
 
       input, select, button {
@@ -106,12 +144,12 @@
         padding: 8px;
       }
 
-      h2 {
-        font-size: 1.2em;
+      h2, h3 {
+        font-size: 1.1em;
       }
 
-      header h1 {
-        font-size: 1.5em;
+      #guideBox table {
+        font-size: 0.85em;
       }
     }
   </style>
@@ -119,175 +157,102 @@
 <body>
 
   <header>
-    <h2>🌿 Farmer-to-Market</h2>
-    <p>Empowering farmers to sell directly</p>
+    <h1>🌾 Agri Input Ordering Portal</h1>
+    <button class="guide-toggle" onclick="toggleGuide()">📘Crop Guide</button>
   </header>
 
   <div class="container">
-
     <div class="section">
-      <h2>📥 Submit Your Produce</h2>
-      <form id="cropForm">
-        <label>Crop Name:</label>
-        <select name="crop" id="cropSelect" required>
-          <option value="">Select Crop</option>
-          <option value="Potatoes">Potatoes</option>
-          <option value="Tomatoes">Tomatoes</option>
+      <h2>📦 Place Your Order</h2>
+      <form id="orderForm">
+        <label>Select Product:</label>
+        <select id="productSelect" required>
+          <option value="">-- Choose Product --</option>
+          <option value="🧴 Pesticide A - ₹250/L" data-price="250">🧴 Pesticide A - ₹250/L</option>
+          <option value="🪴 Fertilizer B - ₹500/Bag" data-price="500">🪴 Fertilizer B - ₹500/Bag</option>
+          <option value="🌿 Organic Compost C - ₹300/Bag" data-price="300">🌿 Organic Compost C - ₹300/Bag</option>
+          <option value="🧬 Bio Enzyme D - ₹450/L" data-price="450">🧬 Bio Enzyme D - ₹450/L</option>
         </select>
 
-        <label>Quantity (kg):</label>
-        <input type="number" name="quantity" required>
+        <label>Quantity:</label>
+        <input type="number" id="productQty" min="1" required>
 
-        <label>Price (₹/kg):</label>
-        <input type="number" name="price" id="priceInput" required>
+        <label>Delivery Address:</label>
+        <input type="text" id="deliveryAddress" required>
 
-        <label>Location (Karnataka):</label>
-        <select name="location" id="locationSelect" required>
-          <option value="">Select Location</option>
-          <option value="Bangalore">Bangalore</option>
-          <option value="Mysore">Mysore</option>
-          <option value="Hubli">Hubli</option>
-          <option value="Mangalore">Mangalore</option>
-          <option value="Belgaum">Belgaum</option>
-        </select>
-
-        <label>Contact Info:</label>
-        <input type="text" name="contact" required>
-
-        <button type="submit">Add Listing</button>
+        <button type="submit" style="margin-top: 15px;">Submit Order</button>
       </form>
+
+      <div id="orderOutput"></div>
     </div>
 
-    <div class="section">
-      <h2>🌾 Available Produce</h2>
-<!-- ✅ Add this NEW section BELOW your 'Available Produce' section -->
-
-<div class="section">
-  <h2>🚛 Transport Assistance</h2>
-
-  <form id="transportForm">
-    <label>Crop to Transport:</label>
-    <input type="text" name="crop" required>
-
-    <label>Pickup Location:</label>
-    <input type="text" name="pickup" required>
-
-    <label>Delivery Destination:</label>
-    <input type="text" name="destination" required>
-
-    <label>Preferred Date:</label>
-    <input type="date" name="date" required>
-
-    <label>Contact Info:</label>
-    <input type="text" name="contact" required>
-
-    <button type="submit">Request Transport</button>
-  </form>
-
-  <div id="transportListings" style="margin-top: 20px;">
-    <!-- Transport requests will show up here -->
-  </div>
-</div>
-
-<!-- ✅ Add this to the bottom of your <script> tag -->
-
-<script>
-  // Add to your existing <script> tag (below crop form logic)
-  const transportForm = document.getElementById('transportForm');
-  const transportListings = document.getElementById('transportListings');
-
-  transportForm.addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    const data = new FormData(transportForm);
-    const crop = data.get('crop');
-    const pickup = data.get('pickup');
-    const destination = data.get('destination');
-    const date = data.get('date');
-    const contact = data.get('contact');
-
-    const div = document.createElement('div');
-    div.className = 'listing';
-    div.innerHTML = `
-      <strong>Transport Request for ${crop}</strong><br>
-      From: ${pickup}<br>
-      To: ${destination}<br>
-      Date: ${date}<br>
-      Contact: ${contact}
-    `;
-    transportListings.prepend(div);
-
-    transportForm.reset();
-  });
-</script>
-      <div id="listings">
-        <div class="listing">
-          <strong>Potatoes</strong><br>
-          Quantity: 500 kg<br>
-          Price: ₹10/kg<br>
-          Location: Meerut, Uttar Pradesh<br>
-          Contact: +91 91234 56789
-        </div>
-        <div class="listing">
-          <strong>Tomatoes</strong><br>
-          Quantity: 300 kg<br>
-          Price: ₹18/kg<br>
-          Location: Nashik, Maharashtra<br>
-          Contact: +91 98765 43210
-        </div>
-      </div>
+    <div class="section" id="guideBox">
+      <h3>📘 Recommended Inputs</h3>
+      <table>
+        <thead>
+          <tr><th>Vegetable</th><th>Suggested Product</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Tomato</td><td>Fertilizer B, Pesticide A</td></tr>
+          <tr><td>Potato</td><td>Organic Compost C</td></tr>
+          <tr><td>Carrot</td><td>Organic Compost C</td></tr>
+          <tr><td>Okra (Bhindi)</td><td>Fertilizer B</td></tr>
+          <tr><td>Brinjal</td><td>Pesticide A</td></tr>
+          <tr><td>Cucumber</td><td>Bio Enzyme D</td></tr>
+          <tr><td>Capsicum</td><td>Fertilizer B</td></tr>
+          <tr><td>Pumpkin</td><td>Organic Compost</td></tr>
+          <tr><td>Chilli</td><td>Bio Enzyme D</td></tr>
+          <tr><td>Radish</td><td>Compost C</td></tr>
+        </tbody>
+        <thead>
+          <tr><th>Green Leafy</th><th>Suggested Product</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Spinach</td><td>Fertilizer B</td></tr>
+          <tr><td>Fenugreek</td><td>Organic Compost</td></tr>
+          <tr><td>Amaranthus</td><td>Bio Enzyme</td></tr>
+          <tr><td>Coriander</td><td>Fertilizer B</td></tr>
+          <tr><td>Mustard Leaves</td><td>Compost C</td></tr>
+          <tr><td>Drumstick Leaves</td><td>Bio Enzyme</td></tr>
+          <tr><td>Mint</td><td>Pesticide A</td></tr>
+          <tr><td>Curry Leaves</td><td>Fertilizer B</td></tr>
+          <tr><td>Celery</td><td>Compost C</td></tr>
+          <tr><td>Parsley</td><td>Organic Compost</td></tr>
+        </tbody>
+      </table>
     </div>
-
   </div>
 
   <script>
-    const form = document.getElementById('cropForm');
-    const listings = document.getElementById('listings');
-    const cropSelect = document.getElementById('cropSelect');
-    const locationSelect = document.getElementById('locationSelect');
-    const priceInput = document.getElementById('priceInput');
-
-    const prices = {
-      Bangalore: { Potatoes: 15, Tomatoes: 20 },
-      Mysore: { Potatoes: 14, Tomatoes: 18 },
-      Hubli: { Potatoes: 13, Tomatoes: 17 },
-      Mangalore: { Potatoes: 16, Tomatoes: 21 },
-      Belgaum: { Potatoes: 12, Tomatoes: 19 }
-    };
-
-    function updatePrice() {
-      const location = locationSelect.value;
-      const crop = cropSelect.value;
-      if (location && crop && prices[location]) {
-        priceInput.value = prices[location][crop] || '';
-      }
+    function toggleGuide() {
+      const guide = document.getElementById("guideBox");
+      guide.style.display = guide.style.display === "block" ? "none" : "block";
     }
 
-    locationSelect.addEventListener('change', updatePrice);
-    cropSelect.addEventListener('change', updatePrice);
-
-    form.addEventListener('submit', function(e) {
+    document.getElementById("orderForm").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const data = new FormData(form);
-      const crop = data.get('crop');
-      const quantity = data.get('quantity');
-      const price = data.get('price');
-      const location = data.get('location');
-      const contact = data.get('contact');
+      const select = document.getElementById("productSelect");
+      const product = select.value;
+      const price = parseInt(select.options[select.selectedIndex].dataset.price);
+      const qty = parseInt(document.getElementById("productQty").value);
+      const address = document.getElementById("deliveryAddress").value;
 
-      const div = document.createElement('div');
-      div.className = 'listing';
+      const total = qty * price;
+
+      const output = document.getElementById("orderOutput");
+      const div = document.createElement("div");
+      div.className = "order-output";
       div.innerHTML = `
-        <strong>${crop}</strong><br>
-        Quantity: ${quantity} kg<br>
-        Price: ₹${price}/kg<br>
-        Location: ${location}<br>
-        Contact: ${contact}
+        <strong>✅ Order Placed:</strong><br>
+        Product: ${product}<br>
+        Quantity: ${qty}<br>
+        Total Price: ₹${total}<br>
+        Delivery: ${address}
       `;
-      listings.prepend(div);
 
-      form.reset();
+      output.prepend(div);
+      this.reset();
     });
   </script>
 
